Switch modal dialog positioning to fixed to avoid shifts of position

--- a/styles/base.css
+++ b/styles/base.css
@@ -519,24 +519,20 @@ div.able-video div.able-now-playing {
 
 /* Modal Dialogs */
 div.able-modal-dialog {
-	position: absolute;
-	height: auto;
-	right: 0px;
-	outline: 0px none;
+	position: fixed;
 	display: none;
-	color: var(--able-modal-color);
-	background-color: var(--able-modal-background);
-	border: var(--able-modal-border);
 	z-index: 10000;
 	max-height: 90%;
 	overflow: auto;
+	transform: translate(-50%,-50%) !important;
 	top: 50%;
 	left: 50%;
+	outline: 0px none;
+	color: var(--able-modal-color);
+	background-color: var(--able-modal-background);
+	border: var(--able-modal-border);
 	width: 50rem;
 	max-width: 95%;
-	margin-left: 0;
-	margin-right: 0;
-	transform: translate(-50%,-50%) !important;
 	padding: 1rem;
 	box-sizing: border-box;
 }
